<resources>
    <string name="app_name">EIM Coursepack</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="title1">EIM</string>
    <string name="title2">Coursepack</string>
    <string name="main_menu">UNITS</string>
    <string name="teachername">By: (Insert name)</string>
    <string name="contentdescription">To insert an image for design</string>
    <string name="Next">Next</string>
    <string name="an_image_in_quiz_fragment">an image in quiz fragment</string>
    <string name="type_your_answer_here">Type your answer here</string>
    <string name="back">Back</string>
    <string name="submit_button">Submit</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="preference_key">EIM_Coursepack_SharedPrefs</string>
    <string name="return_button">Return</string>
    <string name="your_score_is">Your Score is</string>
    <string name="unit_1">UNIT I</string>
    <string name="unit_1_title">Fundamentals  of Electricity</string>
    <string name="unit_1_objectives">Objectives: .. tackles about the fundamentals of electricity ..</string>
    <string name="lesson_1.1_title">Principles and Theories of Electrons</string>
    <string name="lesson_1.2_title">Sources of Energy</string>
    <string name="lesson_1.3_title">Relationship of Current, Voltage and Resistance</string>
    <string name="Lesson1.1">Lesson 1.1</string>
    <string name="Content01">\n\t\tElectricity is a property of the basic particle of matter which, like an atom, consists of proton, electron and neutron.
        The <b>electron</b> is the negatively charged particle of an atom which is sometimes referred to as the negatively charge of electricity.
        On the other hand, the <b>proton</b> is the positively charged particle of an atom which is sometimes referred to as the
        positively charge of electricity that weighs about 1850 times as much as the electron.
        The <b>neutron</b> is the particle which is not electrically charged and weighs slightly more than proton. </string>
    <string name="Content02">\nMolecular theory\n </string>
    <string name="Content03">\t1. All matters are made up of molecules.\n
        \t2. All molecules are made up of atoms.\n
        \t3. All the atoms contain neutron, electrons and protons.\n
        \t4. The entire neutron is neutral, hence, neither positively nor negatively charged.\n
        \t5. The electron of an atom of any substance could be transferred to another atom.
</string>
    <string name="Content04">\nThe electron theory\n </string>
    <string name="Content05">\t\tThe electron theory states that all matter is made up of electricity.  Matter is anything which has weight, occupies space is made up of molecules, of which millions of different kinds.  The molecules in turn, are made up of atoms of which are the smallest units of the several elements and of a limited number.  All atoms believed to be composed of electrons, which are minute particle of negative electricity normally held in place in each atom by positively charged particles called nucleus.
        Thus, the electron, which are interlocked in the atoms, are constantly revealing at great speeds in orbits around positive nuclei.  In a normal atom, the amount of negative electricity of the electrons is exactly neutralized by an equal amount of opposite or positive electricity of the nucleus.  Thus, a normal atom exhibits no external sign of electrification.

</string>
    <string name="Content06">\nStructure of an atom\n </string>
    <string name="Content07">\tAll atoms consist of two basic parts: a body at the center of the atom called the nucleus, orbiting around the nucleus.
Atoms may have more than one orbiting electron, but each atom contains only one nucleus.
 </string>
    <string name="Content08L">\n\tThe attraction between the nucleus and Electron is called electrostatic force, which holds the electron in an orbit.
        Bodies that attract each other in this special electrostatic way are described as charged object.
        The electron carries the Nucleus negative charge (-), while the nucleus carries the positive charge (+).\n\n
     </string>
    <string name="Content8.5L">\tThe positive charge of the nucleus is due to the particles called protons which are found inside the nucleus and have a positive charge equal to the electron’s negative charge\n\n
    The structure of neutrons in the atoms showing the position of its proton, electron, nucleus and neutron is shown below.\n</string>
    <string name="Content09L">\n\n<b>Law of Electrostatics</b>\n\n
\tThe protons and electrons attract each other inside the atom.  It has been known that by nature, unlike charges
        (like the positive protons and negative electrons) attract each other while like charges repel each other; meaning,
        electrons and protons repel each other’s protons.\n </string>
    <string name="Content10">\nStructure of an atom\n </string>
    <string name="Content11">\nStructure of an atom\n </string>
    <string name="Content12">\nStructure of an atom\n </string>
    <string name="Content13">\nStructure of an atom\n </string>
    <string name="Lesson1.2">Lesson 1.2</string>
    <string name="Content1.2.1">\n\n<b>Sources of electricity</b>\n

\n\t1. Friction 	-It is a static electricity which is generated by rubbing two materials.\n
\n2. Chemical action 	- It is a great deal of the world’s electricity produced by batteries.  These devices generate a different potential means of chemical action.
\n\n3. Heat action 	- Two dissolution metals bonded together in a junction when heated, exhibits a difference of potential.  Such bond is called thermocouple.  The trip of an iron wire, for example, may be welded to that of a copper wire.  When, this junction is heated, the iron wire shows a positive charge and the copper wire has a negative charge.  Electricity generated by heat action is called thermoelectric.
\n\n4. Light action 	- Photo cells are semi-conduction devices which convert light electrical energy directly into electrical energy.  Either sunlight or artificial illumination may be employed.  This action is due to the ability of lights energy to free electrons from the atoms of the semiconductor material.  This process is called photoelectricity.
\n\n5. Pressure - It is a difference of potential appears across the face of certain crystal such as quarts, when they are squeezed or stretched.  This is called piezo-electricity.
\n\n6. Mechanical action - All electricity in large useful amount is at present produced by rotating machines working with the use of magnets.  These machines, known as generator, are turned by water power, gas engines or steam engines and sometimes by electric motor.
There are many different types of mechanical power plants to produce electrical energy.\n\n

<b>Hydropower</b> is an energy obtained from flowing water. Energy 	in 	water 	can
        be harnessed and used in the foot motive energy or temperature differences. The most common application is the dam.\n
</string>
    <string name="Content1.2.2">\n\t\tPower produced by the fall of water from a higher to a lower level and extracted by means of waterwheels or hydraulic turbines. Hydro-power is a natural resource available wherever a sufficient volume of steady water flow exists.
 \n\n<b>Nuclear Power</b> is the method in which steam is produced by heating water through a process called nuclear fission. In a nuclear power 	plant, 	a 	reactor contains a core of nuclear fuel, primary enriched uranium. When atoms of uranium fuel are hit by neutrons they fission (split), releasing heat neutrons.
\n</string>
    <string name="Content1.2.3">\n\t\tNuclear power is an electrical power produced from energy released by controlled fission or fusion of atomic nuclei in a nuclear reaction. Mass is converted into energy and the amount of released energy greatly exceeds that from chemical processes such as combustion.

\n\n<b>Solar Power</b> is a power derived from the energy of the sun. A radiant energy produced in the Sun as a result of nuclear fusion 	reactions. 	It 	is transmitted to the earth through space 	by 	electromagnetic radiation in quanta of energy called photons which interact with the earth’s atmosphere and surface.
\n </string>
    <string name="Content1.2.4">\n<b>Wind Power</b> is the kinetic energy 	of 	wind 	or 	the extraction of this energy by wind turbines. 	Windmill machine converts wind into useful energy.
        This energy is derived from the force of wind acting on oblique blades or sails that radiate from a shaft. \n\n</string>
    <string name="Content1.2.5">\nThe turning shaft may be connected to machinery used to perform such work as
milling grain, pumping water, or generating electricity. When the shaft is connected to a load, such as a pump, the device is typically called a windmill. When it is used to generate electricity, it is known as a wind turbine generator.

        \n\n<b>Fossil Fuel Power Plant</b> (FFPP) – (also known as steam electric power plant in the US, thermal power plant in Asia, or power station in UK). The most common source of energy is fossil fuel. Fossil fuels include coal, oil, and natural gas.
\n</string>
    <string name="Content1.2.6">\nFossil fuel is formed from the remains of plant and animals which live thousands of years ago. The burning of those fossil fuel provides energy which can be used to generate electricity.

\n\n<b>Geothermal power</b> comes from heat energy buried beneath the surface of the earth. In some areas of the country, enough heat rises close to the surface of the earth to heat underground water into steam which can be tapped for use in steamturbine plants.
\n</string>
    <string name="Content1.2.7">\nGeothermal Power is the energy extracted from the heat generated by natural concentrations of hot water and steam in the earth’s interior. It can
be used in electric power generation and direct heat applications such as space heating and industrial drying processes.



\n\n<b>Tides</b> is another kind of energy that involves water. Ocean tides can be used to turn turbines to generate electricity. For this to be possible, a dam must be built across the month of a bay. Water then in trapped behind the dam at the high tide. At the low tide, the water is allowed to run out through the dam and used to turn on electrical generator.
\n</string>
    <string name="Content1.3.1">\nIf we are going to study the meaning of electricity deeper, there are three essential elements involved.

 \n\nThese are voltage, current and resistance. George Simon Ohm, a German scientist, discovered in 1826 the relations among them. The discovery led to one of the major laws in electricity called Ohm’s Law. Each of the elements has its own unit of measurement.

\n\n1.	Voltage- Volt is the unit of measurement which named after Alessandro Volta, a physicist whose invention made volt as an electrical pressure needed in electrons to flow in a conductor material. Pressure is also measure through its electromotive force which represented by E  as unit of measurement.

        \n\n<b>Water Representation of Voltage, Current and Resistance</b></string>
    <string name="Content1.3.2">2. Current –  is the movement of electrons in a material,  Andre Marie Ampere, a physicist and Mathematician, whose one ampere of current is the rate of flow of charge passing in a wire conductor that is equal to one coulomb per second.
        Current unit of measurement is Ampere stands for the last name of the proponent. (I) for Intensity of the flow of electrons. </string>
    <string name="Content1.3.3">3. Resistance- this opposes the flow of electrons in material. George Simon Ohm, scientist is the one who  discover the concept of resistance and the relationship of the three  (3) essentials
        of electricity which called as Ohm’s Law. </string>
</resources>