<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Unit1Lesson1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/guideline12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline13">

            <LinearLayout style="@style/linearlayout_style">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/LessonTitle_contentproper"

                    android:text="@string/lesson_1.1_title" />

                <TextView
                    android:id="@+id/Content1"
                    style="@style/Content"
                    android:justificationMode="inter_word"
                    android:text="@string/Content01" />

                <TextView
                    android:id="@+id/Content2"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/Content02"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Content3"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Content03" />

                <TextView
                    android:id="@+id/Content4"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Content04"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Content5"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/Content05" />

                <TextView
                    android:id="@+id/Content6"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Content06"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/Content7"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/Content07" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/smallMargin_lessonContent"
                    android:contentDescription="@string/contentdescription"
                    tools:src="@tools:sample/avatars" />
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/smallMargin_lessonContent"
                    android:contentDescription="@string/contentdescription"
                    tools:src="@tools:sample/avatars" />
                <TextView
                    android:id="@+id/Content8"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/Content08L" />
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/smallMargin_lessonContent"
                    android:contentDescription="@string/contentdescription"
                    tools:src="@tools:sample/avatars" />
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/smallMargin_lessonContent"
                    android:contentDescription="@string/contentdescription"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/Content9"
                    style="@style/Content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/Content09L" />
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/smallMargin_lessonContent"
                    android:contentDescription="@string/contentdescription"
                    tools:src="@tools:sample/avatars" />
                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/smallMargin_lessonContent"
                    android:contentDescription="@string/contentdescription"
                    tools:src="@tools:sample/avatars" />

            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/textView"
            style="@style/lessonNumber"
            android:text="@string/Lesson1.1"
            app:layout_constraintBottom_toTopOf="@+id/guideline13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>