<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Unit6Quiz4Fragment">

    <data>
        <variable
            name="quiz"
            type="com.example.eim_coursepack.Unit6Quiz4Fragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A2ECEF"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/questionText"
                style="@style/subHeadText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="@{quiz.questionText}"
                android:textSize="@dimen/question_text_size"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/questionRadioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quizImage"
                tools:text="Because?" />

            <RadioGroup
                android:id="@+id/questionRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/question_horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/question_horizontal_margin"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionText">


                <RadioButton
                    android:id="@+id/firstChoiceRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/question_vertical_margin"
                    android:text="@{quiz.answers[0]}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="Edi don't" />

                <RadioButton
                    android:id="@+id/secondChoiceRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/question_vertical_margin"
                    android:text="@{quiz.answers[1]}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="Choice 2" />

                <RadioButton
                    android:id="@+id/thirdChoiceRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/question_vertical_margin"
                    android:text="@{quiz.answers[2]}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="Choice 3" />

                <RadioButton
                    android:id="@+id/fourthChoiceRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{quiz.answers[3]}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="Choice 4" />

                <RadioButton
                    android:id="@+id/fifthChoiceRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{quiz.answers[4]}"
                    android:textSize="@dimen/answer_text_size"
                    tools:text="Choice 4" />

            </RadioGroup>

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Next"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toBottomOf="@+id/answerText" />

            <ImageView
                android:id="@+id/quizImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/an_image_in_quiz_fragment"
                app:layout_constraintBottom_toTopOf="@+id/questionText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <EditText
                android:id="@+id/answerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:hint="@string/type_your_answer_here"
                android:text="@{quiz.enteredAns}"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/nextButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionRadioGroup" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/back"
                android:textSize="@dimen/button_text_size"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/nextButton"
                app:layout_constraintEnd_toStartOf="@+id/nextButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nextButton" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/submit_button"
                android:textSize="@dimen/button_text_size"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nextButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>